JI-5681 fix floating point cropper selector dimensions

--- a/styles/scss/_h5peditor-image-edit-popup.scss
+++ b/styles/scss/_h5peditor-image-edit-popup.scss
@@ -27,13 +27,6 @@ body.h5p-editor-image-popup {
   display: inline-block;
   position: relative;
   top: 0;
-  left: 57%;
-  height: auto;
-  width: 100%;
-  max-height: 100%;
-  -webkit-transform: translateX(-57%);
-  -ms-transform: translateX(-57%);
-  transform: translateX(-57%);
   background: #fff;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
